# searxng_cli

./: .gitignore  pyproject.toml  ruff.toml
src/searxng_cli/: __main__.py  cli.py  endpoint.py  outputformat.py  pluginstatus.py  searchresult.py  searxngapi.py  searxngconfig.py
