[tool.poetry]
name = "searxng-cli"
version = "0.1.0"
description = ""
authors = [ "Donald Hawkins <Donald@Hawkins.pro>" ]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
click = "^8.1.7"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.1"
mypy = "^1.10.0"
ruff = ">=0.4.6, <1.0"

[tool.poetry.scripts]
searxng-cli = "searxng_cli.cli:run_cli"
